--- a/part3/package.json
+++ b/part3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "part3",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,6 +14,7 @@
     "nodemon": "^3.0.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
   }
